# apikeyscanner

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  typer_test.py
apikeyscanner/: __init__.py  cli.py  logger.py  patterns.py  reporter.py  result.py  scanner.py  utils.py
examples/: basic_usage.py  fastapi_usage.py
tests/: test_scanner.py
tests/sample_files/: clean_file.py  unsafe_config.py  unsafe_env.env
