[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apikeyscanner"
version = "1.0.0"
description = "A local secret leak detection tool for developers and DevOps teams."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "devxyasir", email = "jamyasir0534@gmail.com" },
]
maintainers = [
    { name = "devxyasir", email = "jamyasir0534@gmail.com" },
]
requires-python = ">=3.10"
keywords = ["security", "secrets", "api-keys", "devops", "scanner", "leak-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
fastapi = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
apikeyscanner = "apikeyscanner.cli:main"

[project.urls]
Homepage = "https://github.com/devxyasir/apikeyscanner"
Repository = "https://github.com/devxyasir/apikeyscanner"
Issues = "https://github.com/devxyasir/apikeyscanner/issues"
GitHub = "https://github.com/devxyasir"
LinkedIn = "https://www.linkedin.com/in/devxyasir/"
X = "https://x.com/devxyasir"
Instagram = "https://www.instagram.com/devxyasir/"

[tool.setuptools.packages.find]
include = ["apikeyscanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apikeyscanner"]
omit = ["tests/*", "examples/*"]
